# famicom-rf-hackrf-decoder

./: CMakeLists.txt  LICENSE  README.ja.md  README.md
.github/workflows/: ci.yml
src/: config.hpp  main.cpp
src/dsp/: agc.hpp  ntsc_decoder.cpp  ntsc_decoder.hpp  video_timing.hpp
src/source/: baseband_file_source.hpp  hackrf_source.cpp  hackrf_source.hpp
src/ui/: sdl_display.cpp  sdl_display.hpp
tests/: baseband_e2e.cmake  baseband_fixture.cpp  baseband_source_test.cpp  juku_synthetic_baseband_e2e.cmake  non_ntsc_baseband_e2e.cmake  non_ntsc_negative.cmake
